--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -5,40 +5,78 @@
     android:layout_height="match_parent"
 
     tools:context=".HomeActivity">
-    
-    <TextView
-        android:id="@+id/text"
-        android:textSize="40sp"
-        android:gravity="center"
-        android:layout_marginTop="80dp"
-        android:textStyle="bold"
-        android:textColor="@color/colorPrimaryDark2"
-        android:text="Welcome!"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
 
-    <TextView
-
-        android:layout_below="@id/text"
-        android:id="@+id/email"
-        android:textSize="25sp"
-        android:gravity="center"
+    <de.hdodenhof.circleimageview.CircleImageView
+       android:id="@+id/profile_image"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:layout_centerHorizontal="true"
         android:layout_marginTop="50dp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black"
-        android:text="Email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:src="@drawable/logo"
+        />
 
-    <TextView
-        android:layout_below="@id/email"
-        android:id="@+id/username"
-        android:textSize="15sp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:text="username"
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="@style/Widget.AppCompat.ActionButton.CloseMode"
+        android:text="Edit Photo"
+        android:layout_below="@+id/profile_image"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/btn_photo"/>
+    
+    <LinearLayout
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_below="@id/btn_photo"
+        android:weightSum="2"
+        android:id="@+id/layout_text"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:src="@drawable/ic_email"
+            android:layout_weight="1"
+            android:layout_width="70dp"
+            android:layout_height="50dp" />
+
+        <EditText
+            android:id="@+id/email"
+            android:hint="email"
+            android:inputType="textEmailAddress"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_marginLeft="30dp"
+        android:layout_marginRight="30dp"
+        android:layout_below="@id/layout_text"
+        android:weightSum="2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:src="@drawable/ic_username"
+            android:layout_weight="1"
+            android:layout_width="70dp"
+            android:layout_height="50dp" />
+
+        <EditText
+            android:id="@+id/username"
+            android:hint="username"
+            android:inputType="textPersonName"
+            android:layout_marginLeft="10dp"
+            android:layout_weight="1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
+
+    </LinearLayout>
+
 
     <Button
         android:layout_alignParentBottom="true"
