--- a/app/src/main/res/layout/activity_add_players.xml
+++ b/app/src/main/res/layout/activity_add_players.xml
@@ -27,7 +27,7 @@
             android:orientation="horizontal">
 
             <Spinner
-                android:id="@+id/team"
+                android:id="@+id/id_team"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_weight="2"
