--- a/app/src/main/res/layout/player_item.xml
+++ b/app/src/main/res/layout/player_item.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardBackgroundColor="@color/colorPrimaryDark"
     android:layout_margin="8dp"
     app:cardCornerRadius="8dp">
 
@@ -27,27 +28,32 @@
             android:id="@+id/text_view_first_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Like: " />
+            android:text="Like: "
+            android:textSize="20sp"/>
         <TextView
             android:id="@+id/text_view_last_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Like: " />
+            android:text="Like: "
+            android:textSize="20sp"/>
         <TextView
             android:id="@+id/text_view_kit"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Like: " />
+            android:text="Like: "
+            android:textSize="20sp"/>
         <TextView
             android:id="@+id/text_view_position"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Like: " />
+            android:text="Like: "
+            android:textSize="20sp"/>
         <TextView
             android:id="@+id/text_view_country"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Like: " />
+            android:text="Like: "
+            android:textSize="20sp"/>
 
     </LinearLayout>
 
