bug modificaciones arreglado

--- a/app/src/main/res/layout/activity_recycler_view_players.xml
+++ b/app/src/main/res/layout/activity_recycler_view_players.xml
@@ -1,10 +1,45 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     tools:context=".RecyclerViewPlayers">
+
+    <EditText
+        android:id="@+id/searching_first_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="search for firstname"
+        android:layout_margin="1dp"/>
+
+    <EditText
+        android:id="@+id/searching_last_name"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="search for lastname"
+        android:layout_margin="1dp"/>
+
+    <EditText
+        android:id="@+id/searching_country"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="search for country"
+        android:layout_margin="1dp"/>
+
+    <EditText
+        android:id="@+id/searching_team"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="search for id_team"
+        android:layout_margin="1dp"/>
+
+    <Spinner
+        android:id="@+id/spinner_id_team"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Teams"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recycler_view"
@@ -15,4 +50,4 @@
 
 
 
-</RelativeLayout>
+</LinearLayout>
